# NP3DP_CPP

./: CMakeLists.txt  README.md
data/: complete_tool_path.csv  face.csv  fillpts.csv  norm.csv  test_part1.STL.csv  vert.csv
include/: NPAM_utilities.hpp  file_rw.hpp  plot_utilities.hpp  transformation_utilities.hpp  utilities.hpp
src/: NPAM_utilities.cpp  file_rw.cpp  infill_path_ex.cpp  main_file.cpp  read_stl_ex.cpp  transformation_utilities.cpp  utilities.cpp
src/extra/: main_file_old.cpp  num_layers_ex.cpp  plot_ex.cpp  proj_pts_ex.cpp  read_stl_ex.cpp  sortrows_ex.cpp  thread_ex.cpp
